fixed alignment of chapter6 bio photos

--- a/public/stylesheets/sass/chapters.sass
+++ b/public/stylesheets/sass/chapters.sass
@@ -23,5 +23,6 @@
   ul.clearing-thumbs
     li
       margin: 0
+      height: 180px
     img
       width: 180px
