--- a/public/stylesheets/sass/content.sass
+++ b/public/stylesheets/sass/content.sass
@@ -100,5 +100,5 @@ span.tooltip
     font-variant: small-caps
     font-size: 0.9em
     padding: 8px
-    margin: -5px 9px 0 0
+    margin: -4px 9px 0 0
 
